# Policy-Indexed-Contiguous-Allocation-System

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_mix.cpp
examples/: demo_event_log.cpp  demo_realistic.cpp  demo_trace_dump.cpp
include/picas/: checkpoints.hpp  config.hpp  events.hpp  fallback.hpp  halting.hpp  invariants.hpp  layer.hpp  os_pages.hpp  picas.hpp  policy.hpp  safety.hpp  scavenger.hpp  tracer.hpp
scripts/: 00_configure.sh  02_test.sh  03_configure_asan.sh  04_build_asan.sh  05_test_asan.sh  06_test_asan_mac.sh  10_run_demo_realistic.sh  11_run_demo_trace_dump.sh  build_release.sh  build_sanitize.sh  clean.sh  run_tests.sh
src/: fallback.cpp  os_pages.cpp  picas.cpp  policy.cpp  safety.cpp  scavenger.cpp  tracer.cpp
tests/: demo_observe.cpp  smoke.cpp  test_alignment.cpp  test_correctness.cpp  test_multithread.cpp  test_reuse_bins.cpp
